Updated resume. Fixed display overflow on chrome

--- a/css/redux.css
+++ b/css/redux.css
@@ -5,12 +5,15 @@ html, body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    max-width: 100vw;
     background: repeating-linear-gradient( to right, #c4ccd6, #c4ccd6 8px, #cbd1d9 5px, #cbd1d9 11px );
+    overflow-x: clip;
 }
 .display {
     width: 100vw;
     height: 100vh;
     background-size: 100%;
+    overflow-x: clip;
 }
 .app {
     background: repeating-linear-gradient( to right, #c4ccd6, #c4ccd6 8px, #cbd1d9 5px, #cbd1d9 11px );
